# PBrushCairo

./: CMakeLists.txt  README.md  project_create.sh
include/: brush.h  brush_pix.h  canvas.h  darray.h  includes.h  input.h  input_s.h  layer.h  layer_op.h  mainwindow.h  viewport.h
res/brushes/b1/: brush.lua
src/: .canvas.c.swp  brush_pix.c  canvas.c  input.c  layer.c  main.c  mainwindow.c  viewport.c
